--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="featured_movies">Featured Movies</string>
     <string name="liked_movies">Liked Movies</string>
     <string name="downloaded_movies">Downloaded Movies</string>
+    <string name="searched_movies">Searched Movies</string>
     <string name="forward_button">Forward button </string>
     <string name="movie_poster">Movie poster</string>
     <string name="save">Save</string>
@@ -17,4 +18,7 @@
     <string name="back_button">Back button</string>
     <string name="search_button">Search button</string>
     <string name="clear_button">Clear button</string>
+    <string name="oops_message">Oops, something went wrong!\nError code is %1$s</string>
+    <string name="type_to_search">Type To Search</string>
+    <string name="nothing_found">Nothing Found</string>
 </resources>
